# branch2

./: CHANGELOG.rst  README.rst  pyproject.toml
.github/workflows/: action.yml
docsrc/: conf.py  index.rst  intro.rst
docsrc/modules/: index.rst
src/phiarchitect/branch2/: __init__.py  app.py  branch2.py
