[project]
name = "phiarchitect-branch2"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "branch testing"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
branch2 = "phiarchitect.branch2.__main__:run"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["phiarchitect"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "phiarchitect.branch2.__version__"}

[project.urls]
"Website" = "https://phiarchitect.github.io/branch2"
"Repository" = "https://github.com/phiarchitect/branch2"
"Issues" = "https://github.com/phiarchitect/branch2/issues"